--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
-RewriteEngine On
+<IfModule mod_rewrite.c>
 
+    RewriteEngine on
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-l
-
-RewriteRule ^(.+)$ public/index.php?url=$1 [QSA,L]
+    RewriteRule ^$ public/ [L]
+    RewriteRule (.*) public/$1 [L]
+    
+</IfModule>
